--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -61,9 +61,9 @@
 				</tr>
 
 				<tr
-					ng-repeat="account in accounts | orderBy:'email' track by account.email">
+					ng-repeat="account in accounts | orderBy:'email'">
 					<td ng-init="checkLoaded($index)">{{ account.zprId }}</td>
-					<td ng-init="checkLoaded($index)">{{ account.email }}</td>
+					<td>{{ account.email }}</td>
 					<td><span ng-show="shown($index)"><button
 								ng-click="show(-1)">hide</button>&nbsp;&nbsp;{{account.password}}</span>
 						<span ng-hide="shown($index)"><button
